@@ -28,6 +28,8 @@
 - Bugfix: The XML analysis does not recognise a broken XML string.
 - Bugfix: The scalar analysis does not return the output from the
   start event when there is no meta to display.
+- Bugfix: The serialized string analysis was too strict to detect
+  all possible candidates.
 
 5.0.6
 - Added the handling of type casting to the regex getter analysis.
